# OpenFUSIONToolkit

./: .editorconfig  .gitignore  3222magsensorloc.txt  CONTRIBUTING.md  README.md  codecov.yml  config_cmake.sh  g194414.05250  k199377.03300  setup_env.sh  vv_fluxloops.txt
src/: CMakeLists.txt  CONTRIBUTING.md  Makefile  make_cmd.mk  make_inc.mk
src/base/: CMakeLists.txt  Makefile  oft_base.F90  oft_io.F90  oft_local.F90  oft_local_c.c  oft_sort.F90  oft_sort_c.cxx  oft_stitching.F90  oft_xml.F90  oft_xml_c.c  spline.f
src/cmake/: FindOFT_ARPACK.cmake  FindOFT_FoX.cmake  FindOFT_LibXml2.cmake  FindOFT_METIS.cmake  FindOFT_NETCDF.cmake  FindOFT_OpenNURBS.cmake  FindOFT_PETSc.cmake  FindOFT_SUPERLU.cmake  FindOFT_SUPERLU_DIST.cmake  FindOFT_UMFPACK.cmake  MACOS_WELCOME.txt  OFTPatchPackage.cmake  fix_signatures.sh.in  patch_package.py
src/docs/: Doxyfile.in  OFTLayout.xml  build_doc_versions.sh  doc_api_main.md  doc_comp_fem.md  doc_cubit.md  doc_doxygen.md  doc_gmsh.md  doc_input_file.md  doc_marklin_main.md  doc_mesh_construction.md  doc_mesh_native.md  doc_mug_main.md  doc_petsc_usage.md  doc_psitet_fem.md  doc_psitet_io.md  doc_solvers.md  doc_stack.md  doc_t3d.md  doc_tests.md  doc_thincurr_main.md  doc_tokamaker_main.md  doxygen-awesome.css  filter_python_doxygen.py  mainpage.in  mainpage.md  oft_custom.css  thincurr_example1.md  thincurr_example2.md  thincurr_example3.md
src/docs/ThinCurr/: doc_thincurr_dep.md  doc_thincurr_main.md  thincurr_example1.md  thincurr_example2.md  thincurr_example3.md  thincurr_example4.md
src/docs/website/: index.html  publications.html
src/examples/: CMakeLists.txt  Makefile  cyl.stp  example1.F90  example2.F90  example3.F90  example4.F90  example5.F90  example6.F90  test_examples.sh.in
src/examples/MUG/: CMakeLists.txt
src/examples/Marklin/: CMakeLists.txt  test_examples.sh.in
src/examples/ThinCurr/: CMakeLists.txt  test_examples.sh.in
src/examples/TokaMaker/: CMakeLists.txt  test_examples.sh.in
src/examples/TokaMax/: ITER_ex.ipynb
src/ext_libs/: CMakeLists.txt  Makefile  bvls.f90  dlsode.f  dqagse.f  dqelg.f  dqk21.f  lmdif.f  triangle.c
src/fem/: CMakeLists.txt  Makefile  blag_operators.F90  fem_base.F90  fem_composite.F90  fem_utils.F90  h0_basis.F90  h0_fields.F90  h0_operators.F90  h1_basis.F90  h1_fields.F90  h1_operators.F90  hcurl_basis.F90  hcurl_fields.F90  hcurl_grad_operators.F90  hcurl_operators.F90  lagrange_basis.F90  lagrange_fields.F90  lagrange_operators.F90
src/grid/: .gitignore  CMakeLists.txt  Makefile  bezier_cad.F90  c_nurbs.cxx  hexmesh_type.F90  lagrange_poly.F90  mesh_cube.F90  mesh_cubit.F90  mesh_global.F90  mesh_global_util.F90  mesh_gmsh.F90  mesh_local.F90  mesh_local_util.F90  mesh_native.F90  mesh_sphere.F90  mesh_t3d.F90  mesh_type.F90  metis_bridge.c  multigrid.F90  multigrid_build.F90  nurbs_cad.F90  quadmesh_type.F90  quadrature.F90  tetmesh_tessellation.F90  tetmesh_type.F90  trimesh_tessellation.F90  trimesh_type.F90
src/include/: CMakeLists.txt  Makefile  create_git_header.sh  local.h  oft_petsc-dummy.h  oft_petsc.h
src/julia/TokaMaker/: .gitignore  Manifest.toml  Project.toml  README.md
src/lin_alg/: CMakeLists.txt  Makefile  deriv_matrices.F90  lin_alg_base.F90  lin_alg_utils.F90  mkl_bridge.c  native_la.F90  native_solvers.F90  oft_arpack.F90  oft_lu.F90  petsc_la.F90  petsc_solvers.F90  solver_base.F90  solver_utils.F90  superlu_bridge.c  superlu_dist_bridge.c  umfpack_bridge.c
src/physics/: CMakeLists.txt  Makefile  axi_green.F90  diagnostic.F90  grad_shaf.F90  grad_shaf_bootstrap.F90  grad_shaf_fit.F90  grad_shaf_mercier.F90  grad_shaf_prof_phys.F90  grad_shaf_profiles.F90  grad_shaf_td.F90  grad_shaf_util.F90  gs_eq.F90  mhd_utils.F90  mugtok_td.F90  oft_scalar_inits.F90  oft_vector_inits.F90  taylor.F90  thermal_diffusion_2d.F90  thin_wall.F90  thin_wall_hodlr.F90  thin_wall_solvers.F90  tracing.F90  tracing_2d.F90  xmhd.F90  xmhd_2d.F90  xmhd_lag.F90
src/python/: make_package.sh.in  pyproject.toml  pyproject.toml.in
src/python/OpenFUSIONToolkit/: CMakeLists.txt  Marklin.py  ThinCurr.py  TokaMaker.py  __init__.py  _core.py  _interface.py  io.py  util.py
src/python/wrappers/: CMakeLists.txt  Makefile  marklin_f.F90  mugtok_f.F90  oft_base_f.F90  thincurr_f.F90  tokamaker_f.F90
src/tests/: .coveragerc  CMakeLists.txt  Makefile  oft_testing.py  run_test.sh.in  test_pulse_planning.py
src/tests/base/: CMakeLists.txt  test_file.xml  test_io.F90  test_io.py  test_xml.F90  test_xml.py
src/tests/fem/: CMakeLists.txt  Makefile  test_blag.F90  test_blag.py  test_h0.F90  test_h0.py  test_h1.F90  test_h1.py  test_hcurl.F90  test_hcurl.py  test_hcurl_grad.F90  test_hcurl_grad.py  test_hcurl_sop.F90  test_hcurl_sop.py  test_lag.F90  test_lag.py  test_lag_2d.F90  test_lag_2d.py  test_vlag.F90  test_vlag.py
src/tests/grid/: CMakeLists.txt  Makefile  circle_quad4_test.g  circle_quad4_test.h5  circle_quad4_test.in.e  circle_quad9_test.g  circle_quad9_test.h5  circle_quad9_test.in.e  circle_surface_test.jou  circle_tri3_test.in.e  circle_tri6_test.g  circle_tri6_test.in.e  cyl.inp  cyl.t3d  cyl_gmsh.h5  mapping_jac.tests  plot_tri.py  quad_2d.tests  quad_3d.tests  ref_hex27_test.g  ref_hex27_test.h5  ref_hex27_test.in.e  ref_hex8_test.g  ref_hex8_test.in.e  ref_test.3dm  ref_test.in.e  ref_test.jou  ref_test_2d.jou  ref_tet10_test.g  ref_tet10_test.h5  ref_tet10_test.in.e  ref_tet4_test.g  ref_tet4_test.h5  ref_tri3_test.h5  ref_tri6_test.h5  sphere_cut_test.g  sphere_cut_test.h5  sphere_cut_test.in.e  sphere_hex27_test.g  sphere_hex27_test.in.e  (+40 more)
src/tests/lin_alg/: CMakeLists.txt  Makefile  test_arpack.F90  test_arpack.py  test_native_bjacobi.F90  test_native_bjacobi.py  test_solver_xml.F90  test_solver_xml.py
src/tests/physics/: CMakeLists.txt  D3Dlike_Hmode_test.peqdsk  ITER_test.eqdsk  ITER_test.ifile  Makefile  (+62 more)
src/utilities/: CMakeLists.txt  build_libs.py  build_xdmf-legacy.py  build_xdmf-new.py  build_xdmf.py  convert_cubit.py  convert_gmsh.py  convert_hist.py  create_tesselation.py  generate_doc.py  generate_stack.py  oft_io.py  oft_mpl.py  tokamaker_fit.py
(+562 files in other folders)
