#
install(FILES plate/oft.in DESTINATION examples/ThinCurr/plate COMPONENT examples)
install(FILES plate/oft_in.xml DESTINATION examples/ThinCurr/plate COMPONENT examples)
install(FILES plate/thincurr_ex-plate.h5 DESTINATION examples/ThinCurr/plate COMPONENT examples)
#
install(FILES cyl/oft.in DESTINATION examples/ThinCurr/cyl COMPONENT examples)
install(FILES cyl/oft_in.xml DESTINATION examples/ThinCurr/cyl COMPONENT examples)
install(FILES cyl/curr.drive DESTINATION examples/ThinCurr/cyl COMPONENT examples)
install(FILES cyl/thincurr_ex-cyl.h5 DESTINATION examples/ThinCurr/cyl COMPONENT examples)
#
install(FILES torus/oft.in DESTINATION examples/ThinCurr/torus COMPONENT examples)
install(FILES torus/oft_in.xml DESTINATION examples/ThinCurr/torus COMPONENT examples)
install(FILES torus/thincurr_ex-torus.h5 DESTINATION examples/ThinCurr/torus COMPONENT examples)