install(DIRECTORY plate DESTINATION examples/ThinCurr COMPONENT examples)
install(DIRECTORY cyl DESTINATION examples/ThinCurr COMPONENT examples)
install(DIRECTORY torus DESTINATION examples/ThinCurr COMPONENT examples)
install(DIRECTORY ports DESTINATION examples/ThinCurr COMPONENT examples)
install(DIRECTORY REGCOIL DESTINATION examples/ThinCurr COMPONENT examples)
