install(DIRECTORY fixed_boundary DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY HBT DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY ITER DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY DIIID DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY CUTE DESTINATION examples/TokaMaker COMPONENT examples)