install(DIRECTORY fixed_boundary DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY HBT DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY ITER DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY DIIID DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY CUTE DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY LTX DESTINATION examples/TokaMaker COMPONENT examples)
install(DIRECTORY Dipole DESTINATION examples/TokaMaker COMPONENT examples)