add_subdirectory( TokaMaker )
add_subdirectory( TokaMax )
add_subdirectory( ThinCurr )
add_subdirectory( Marklin )

file(GLOB MY_SOURCES "*.py" )
foreach(SOURCE_FILE IN LISTS MY_SOURCES)
  if(${SOURCE_FILE} MATCHES "__init__.py")
    continue()
  endif()
  configure_file( ${SOURCE_FILE} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY )
  install(FILES ${SOURCE_FILE} DESTINATION python/OpenFUSIONToolkit COMPONENT app)
endforeach()
configure_file( __init__.py ${CMAKE_CURRENT_BINARY_DIR} @ONLY )
install( FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py DESTINATION python/OpenFUSIONToolkit COMPONENT app )